
[project]
name = "Measurement"
version = "1.0"
authors = [
    { name="Nathan Le Retif", email="nathan@leretif.com" }
]
description = "A project to encapsulate and automatize the propagation of uncertainty for measurements in physics"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENCE"]
dependencies = [
    "numpy",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/Nath282/Measurement"